--- a/vinyl-collector-app/src/styles/globals.css
+++ b/vinyl-collector-app/src/styles/globals.css
@@ -3,4 +3,8 @@
 @theme {
   --font-sans: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif,
     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --color-primary-100: #EEEEEE;
+  --color-primary-200: #D2D2D2;
+  --color-primary-300: #BBBBBB;
+  --color-primary-400: #2B2B2B;
 }
