successfully switch database to postgres and made the db config easier to use with env varibles for all db information.

--- a/vinyl-collector-app/src/styles/globals.css
+++ b/vinyl-collector-app/src/styles/globals.css
@@ -8,3 +8,8 @@
   --color-primary-300: #BBBBBB;
   --color-primary-400: #2B2B2B;
 }
+
+body{
+  background-color: var(--color-primary-100);
+  color: var(--color-primary-400);
+}
